--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,5 @@
 <%= render partial: 'elements/user_info', locals: {name: 'Kojosh', address: '22223 fun street', phone: '2321113232'} %>
 <%= render partial: 'elements/boxes' %>
 
-<span class="label label-default">Default</span>
+<span class="label label-default">fdjfkdljdkfjkldsjkldfjkl</span>
 
