--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<% flash.each do |name, msg| %>
-  <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
+<% flash.each do |name, msg| %>  
+  <%= content_tag :div, :class => "alert alert-#{ name == "error" ? "danger" : "success" } alert-dismissable" do %>
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
     <%= msg %>
   <% end %>
