--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
 
-<% @posts = Post.all %>
-
 <% @posts.each do |post| %>
 	<label><%= post.user %> <%= post.text %></label>
 	<a href="/posts/<%= post.id%>">show</a>
+	<a href= "<%= edit_post_path(post.id) %>"> edit</a>
+	<%= link_to 'delete', post, :method => :delete %>
+
 	<br>
 
 <% end %>
